<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/lock"
            android:padding="14dp"
            android:src="@drawable/lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:padding="20dp"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:src="@drawable/menu_lines"
            android:contentDescription="@string/menu_btn"
            android:layout_alignParentEnd="true"
            android:padding="14dp"/>

        <TextView
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:layout_marginEnd="70dp"
            android:layout_alignParentEnd="true"
            android:text="@string/_70"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="14dp"/>
        <ImageView
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_paid"
            android:contentDescription="@string/paid_val"
            android:layout_marginEnd="110sp"
            android:layout_alignParentEnd="true"
            android:padding="14dp"/>

        <ImageView
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_paid"
            android:contentDescription="@string/paid_val"
            android:layout_marginEnd="50dp"
            android:layout_alignParentEnd="true"
            android:padding="14dp"/>

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="48pt"
            android:contentDescription="@string/down_arrow"
            android:padding="14dp"
            android:src="@drawable/arrow_down_btn" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/_29" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240sp"
            android:layout_marginTop="25sp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/_30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="330sp"
            android:layout_marginTop="25sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/_40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140sp"
            android:layout_marginTop="50sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/posts"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210sp"
            android:layout_marginTop="50sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/followers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310sp"
            android:layout_marginTop="50sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/following" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/profile_pic"
                android:contentDescription="@string/profile_pic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/username" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:text="@string/edit_profile"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#3E3C3C"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="7dp"
            android:layout_marginStart="20dp"
            />

        <Button
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:text="@string/share_profile"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="#3E3C3C"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="7dp"
            android:layout_marginStart="210dp"
            />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="TextLayout"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="488dp"
        android:contentDescription="Viewpager" />
</LinearLayout>